[package]
name = "async-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-task = "4.7.1"
flume = "0.11.1"
futures = "0.3.31"
futures-lite = "2.6.1"
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = [
  "fs",
  "io-util",
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
] }
